--- a/p8105_hw6_alc2279.md
+++ b/p8105_hw6_alc2279.md
@@ -26,6 +26,34 @@ library(viridis)
 
     ## Loading required package: viridisLite
 
+``` r
+library(glmnet)
+```
+
+    ## Loading required package: Matrix
+
+    ## 
+    ## Attaching package: 'Matrix'
+
+    ## The following object is masked from 'package:tidyr':
+    ## 
+    ##     expand
+
+    ## Loading required package: foreach
+
+    ## 
+    ## Attaching package: 'foreach'
+
+    ## The following objects are masked from 'package:purrr':
+    ## 
+    ##     accumulate, when
+
+    ## Loaded glmnet 2.0-16
+
+``` r
+library(modelr)
+```
+
 Problem 1
 =========
 
@@ -182,20 +210,274 @@ Part 1: Load the data
 
 Load and clean the data for regression analysis (i.e. convert numeric to factor where appropriate, check for missing data, etc.).
 
+``` r
+birthweight_data = read_csv(file = "./data/birthweight.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(babysex = recode(babysex, `1` = "male", `2` = "female"), 
+         babysex = as.factor(babysex), 
+         frace = recode(frace,  `1` = "white", `2` = "black", `3` = "asian", 
+                        `4` = "puerto_rican", `8` = "other", `9` = "unknown"),
+         frace = as.factor(frace), 
+         mrace = recode(mrace,  `1` = "white", `2` = "black", `3` = "asian", 
+                        `4` = "puerto_rican", `8` = "other" ),
+         mrace = as.factor(mrace), 
+         malform = as.factor(malform)) %>% 
+  select(bwt, everything())
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_integer(),
+    ##   gaweeks = col_double(),
+    ##   ppbmi = col_double(),
+    ##   smoken = col_double()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+``` r
+skimr::skim(birthweight_data)
+```
+
+    ## Skim summary statistics
+    ##  n obs: 4342 
+    ##  n variables: 20 
+    ## 
+    ## -- Variable type:factor -------------------------------------------------------------------------------------
+    ##  variable missing complete    n n_unique
+    ##   babysex       0     4342 4342        2
+    ##     frace       0     4342 4342        5
+    ##   malform       0     4342 4342        2
+    ##     mrace       0     4342 4342        4
+    ##                               top_counts ordered
+    ##              mal: 2230, fem: 2112, NA: 0   FALSE
+    ##  whi: 2123, bla: 1911, pue: 248, asi: 46   FALSE
+    ##                    0: 4327, 1: 15, NA: 0   FALSE
+    ##  whi: 2147, bla: 1909, pue: 243, asi: 43   FALSE
+    ## 
+    ## -- Variable type:integer ------------------------------------------------------------------------------------
+    ##  variable missing complete    n      mean     sd  p0  p25    p50  p75 p100
+    ##     bhead       0     4342 4342   33.65     1.62  21   33   34     35   41
+    ##   blength       0     4342 4342   49.75     2.72  20   48   50     51   63
+    ##       bwt       0     4342 4342 3114.4    512.15 595 2807 3132.5 3459 4791
+    ##     delwt       0     4342 4342  145.57    22.21  86  131  143    157  334
+    ##   fincome       0     4342 4342   44.11    25.98   0   25   35     65   96
+    ##  menarche       0     4342 4342   12.51     1.48   0   12   12     13   19
+    ##   mheight       0     4342 4342   63.49     2.66  48   62   63     65   77
+    ##    momage       0     4342 4342   20.3      3.88  12   18   20     22   44
+    ##    parity       0     4342 4342    0.0023   0.1    0    0    0      0    6
+    ##   pnumlbw       0     4342 4342    0        0      0    0    0      0    0
+    ##   pnumsga       0     4342 4342    0        0      0    0    0      0    0
+    ##      ppwt       0     4342 4342  123.49    20.16  70  110  120    134  287
+    ##    wtgain       0     4342 4342   22.08    10.94 -46   15   22     28   89
+    ##      hist
+    ##  <U+2581><U+2581><U+2581><U+2581><U+2585><U+2587><U+2581><U+2581>
+    ##  <U+2581><U+2581><U+2581><U+2581><U+2581><U+2587><U+2581><U+2581>
+    ##  <U+2581><U+2581><U+2581><U+2583><U+2587><U+2587><U+2582><U+2581>
+    ##  <U+2581><U+2587><U+2585><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2581><U+2582><U+2587><U+2582><U+2582><U+2582><U+2581><U+2583>
+    ##  <U+2581><U+2581><U+2581><U+2581><U+2582><U+2587><U+2581><U+2581>
+    ##  <U+2581><U+2581><U+2581><U+2585><U+2587><U+2582><U+2581><U+2581>
+    ##  <U+2582><U+2587><U+2585><U+2582><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2581><U+2581><U+2581><U+2587><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2581><U+2581><U+2581><U+2587><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2581><U+2587><U+2586><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2581><U+2581><U+2581><U+2587><U+2587><U+2581><U+2581><U+2581>
+    ## 
+    ## -- Variable type:numeric ------------------------------------------------------------------------------------
+    ##  variable missing complete    n  mean   sd    p0   p25   p50   p75 p100
+    ##   gaweeks       0     4342 4342 39.43 3.15 17.7  38.3  39.9  41.1  51.3
+    ##     ppbmi       0     4342 4342 21.57 3.18 13.07 19.53 21.03 22.91 46.1
+    ##    smoken       0     4342 4342  4.15 7.41  0     0     0     5    60  
+    ##      hist
+    ##  <U+2581><U+2581><U+2581><U+2581><U+2583><U+2587><U+2581><U+2581>
+    ##  <U+2581><U+2587><U+2585><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
+
+``` r
+## no missing data
+```
+
 Part 2: Fit a regression model predicting birthweight
 -----------------------------------------------------
 
 Propose a regression model for birthweight. This model may be based on a hypothesized structure for the factors that underly birthweight, on a data-driven model-building process, or a combination of the two. Describe your modeling process and show a plot of model residuals against fitted values – use add\_predictions and add\_residuals in making this plot.
 
-Part 3: Compare regression model to others
-------------------------------------------
+``` r
+##based on hypothesis, not data driven
+
+
+birthweight_model_function = function(df) {
+  lm(bwt ~ bhead + blength + delwt + gaweeks, data = df)
+}
+
+birthweight_model = birthweight_model_function(birthweight_data)
+
+  
+birthweight_data %>% 
+  add_predictions(birthweight_model) %>% 
+  add_residuals (birthweight_model) %>% 
+  ggplot(aes(x = pred, y = resid)) + 
+    geom_point(alpha = 0.3) +
+  labs(
+        title = "Hypothesized Regression Model: Residuals vs. Predicted Values",
+        x = "Predicted Birthweight (g)",
+        y = "Residuals"
+      )
+```
+
+![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-8-1.png)
+
+``` r
+##trying lasso
+
+birthweight_lasso = glmnet(birthweight_data, birthweight_data$bwt, alpha = 1, lambda = lambda)
+
+?glmnet
+
+x = model.matrix(bwt ~ ., data = birthweight_data)[, -1]
+y = birthweight_data$bwt
+lasso.mod = glmnet(as.matrix(x), y, alpha = 1)
+
+x <- model.matrix(Sepal.Length~., iris)[,-1]
+y <- iris$Sepal.Length
+mod <- cv.glmnet(as.matrix(x), y, alpha=1)
+
+as.matrix(coef(lasso.mod, lasso.mod$lambda.min))
+
+
+require(glmnet)
+
+ezlasso=function(df,yvar,folds=10,trace=F,alpha=1){
+  x<-model.matrix(as.formula(paste(yvar,"~.")),data=df)
+  x=x[,-1] ##remove intercept
+
+  glmnet1<-glmnet::cv.glmnet(x=x,y=df[,yvar],type.measure='mse',nfolds=folds,alpha=alpha)
+
+  co<-coef(glmnet1,s = "lambda.1se")
+  inds<-which(co!=0)
+  variables<-row.names(co)[inds]
+  variables<-variables[!(variables %in% '(Intercept)')];
+  return( c(yvar,variables));
+}
+
+ezlasso(birthweight_data, birthweight_data$bwt)
+
+
+ezlasso=function(df,yvar,folds=10,trace=F,alpha=1){
+  x<-model.matrix(as.formula(paste(yvar,"~.")),data=df)
+  x=x[,-1] ##remove intercept
+
+  glmnet1<-glmnet::cv.glmnet(x=x,y=df[,yvar],type.measure='mse',nfolds=folds,alpha=alpha)
+
+  co<-coef(glmnet1,s = "lambda.1se")
+  inds<-which(co!=0)
+  variables<-row.names(co)[inds]
+  variables<-variables[!(variables %in% '(Intercept)')];
+  return( c(yvar,variables));
+}
+
+x = model.matrix(bwt ~ ., data = birthweight_data)[, -1]
+y = birthweight_data$bwt
+lasso.mod = glmnet(as.matrix(x), y, alpha = 1)
+
+plot(lasso.mod, xvar = "lambda")
+
+
+coef(lasso.mod, s = 100)
+
+crossval <-  cv.glmnet(x = X, y = y)
+plot(crossval)
+penalty <- crossval$lambda.min #optimal lambda
+penalty #minimal shrinkage
+fit1 <-glmnet(x = X, y = y, alpha = 1, lambda = penalty ) #estimate the model with that
+coef(fit1)
+```
+
+Part 3: Create additional models and compare using cross validation
+-------------------------------------------------------------------
 
 Compare your model to two others:
 
 -   One using length at birth and gestational age as predictors (main effects only)
 -   One using head circumference, length, sex, and all interactions (including the three-way interaction) between these
 
-Part 4: Cross validate!
------------------------
+``` r
+birthweight_model_alt1_function = function(df) {
+  lm(bwt ~ blength + gaweeks, data = df)
+}
+
+birthweight_model_alt1_function(birthweight_data)
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ blength + gaweeks, data = df)
+    ## 
+    ## Coefficients:
+    ## (Intercept)      blength      gaweeks  
+    ##    -4347.67       128.56        27.05
+
+``` r
+birthweight_model_alt2_function = function(df) {
+  lm(bwt ~ bhead + blength + babysex +
+       (bhead * blength) + (bhead * babysex) + (blength * babysex) +
+       (bhead * blength * babysex), data = df)
+}
+
+birthweight_model_alt2_function(birthweight_data)
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ bhead + blength + babysex + (bhead * blength) + 
+    ##     (bhead * babysex) + (blength * babysex) + (bhead * blength * 
+    ##     babysex), data = df)
+    ## 
+    ## Coefficients:
+    ##               (Intercept)                      bhead  
+    ##                  -801.949                    -16.598  
+    ##                   blength                babysexmale  
+    ##                   -21.646                  -6374.868  
+    ##             bhead:blength          bhead:babysexmale  
+    ##                     3.324                    198.393  
+    ##       blength:babysexmale  bhead:blength:babysexmale  
+    ##                   123.773                     -3.878
 
 Make this comparison in terms of the cross-validated prediction error; use crossv\_mc and functions in purrr as appropriate.
+
+``` r
+cv_birthweight = 
+  crossv_mc(birthweight_data, 100) 
+
+cv_birthweight = 
+  cv_birthweight %>% 
+  mutate(birthweight_model = map(train, birthweight_model_function),
+         birthweight_model_alt1 = map(train, birthweight_model_alt1_function),
+         birthweight_model_alt2 = map(train, birthweight_model_alt2_function)) %>% 
+  mutate(rmse_birthweight_model = map2_dbl(birthweight_model, test, ~rmse(model = .x, data = .y)),
+         rmse_birthweight_model_alt1 = map2_dbl(birthweight_model_alt1, test, ~rmse(model = .x, data = .y)),
+         rmse_birthweight_model_alt2 = map2_dbl(birthweight_model_alt2, test, ~rmse(model = .x, data = .y)))
+
+
+
+cv_birthweight %>% 
+  select(starts_with("rmse")) %>% 
+  gather(key = model, value = rmse) %>% 
+  mutate(model = str_replace(model, "rmse_", ""),
+         model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse, color = model)) + 
+  geom_violin() +
+  theme(legend.position = "none") +
+  labs(
+        title = "Comparing predictive birthweight models by RMSE",
+        x = "Model",
+        y = "RMSE"
+      ) +
+    viridis::scale_color_viridis(
+      discrete = TRUE
+    )
+```
+
+![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-11-1.png)
